tests/ui/rfcs/rfc-2632-const-trait-impl/tilde-const-and-const-params.stderr
error: `~const` is not allowed here
  --> $DIR/tilde-const-and-const-params.rs:9:15
   |
LL |     fn add<A: ~const Add42>(self) -> Foo<{ A::add(N) }> {
   |               ^^^^^^
   |
note: this function is not `const`, so it cannot have `~const` trait bounds
  --> $DIR/tilde-const-and-const-params.rs:9:8
   |
LL |     fn add<A: ~const Add42>(self) -> Foo<{ A::add(N) }> {
   |        ^^^

error: `~const` is not allowed here
  --> $DIR/tilde-const-and-const-params.rs:27:11
   |
LL | fn bar<A: ~const Add42, const N: usize>(_: Foo<N>) -> Foo<{ A::add(N) }> {
   |           ^^^^^^
   |
note: this function is not `const`, so it cannot have `~const` trait bounds
  --> $DIR/tilde-const-and-const-params.rs:27:4
   |
LL | fn bar<A: ~const Add42, const N: usize>(_: Foo<N>) -> Foo<{ A::add(N) }> {
   |    ^^^

error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error[E0308]: mismatched types
  --> $DIR/tilde-const-and-const-params.rs:27:61
   |
LL | fn bar<A: ~const Add42, const N: usize>(_: Foo<N>) -> Foo<{ A::add(N) }> {
   |                                                             ^^^^^^^^^ expected `false`, found `true`
   |
   = note: expected constant `false`
              found constant `true`

error[E0308]: mismatched types
  --> $DIR/tilde-const-and-const-params.rs:9:44
   |
LL |     fn add<A: ~const Add42>(self) -> Foo<{ A::add(N) }> {
   |                                            ^^^^^^^^^ expected `false`, found `true`
   |
   = note: expected constant `false`
              found constant `true`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
